--- a/style.css
+++ b/style.css
@@ -56,8 +56,6 @@
     margin: 30px;
     padding: 9%;
     text-align: center;
-
-
 }
 
 .texto .parrafo img{
@@ -84,6 +82,7 @@
 .fotos img{
     height: 300px;
     padding: 20px;
+    border-radius: 20%;
     
 }
 
@@ -95,10 +94,7 @@
     margin-top: auto;
     width: 100%;
     height: 6px;
-    
 }
-
-
 
 .pie-pagina .box-1 a img{
     width: 90px;
@@ -141,3 +137,97 @@
     background-color: rgba(231, 74, 132, 0.226);
 }
 
+
+@media screen and (max-width:360px) {
+    /*NAV**************/
+    .contenedor{
+        margin: auto;
+        padding: auto;
+        height: 70px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: rgba(231, 74, 132, 0.096);
+    }
+    .contenedor .logo img{
+        height: 50px;
+        padding-left: 30px;
+        
+    }
+
+    .contenedor .logo img:hover{
+        filter: opacity(.5);
+    }
+
+    .contenedor .contenido .listaUl{
+        display: flex;
+        list-style: none; 
+        padding-right: 40px;
+        
+    }
+
+    .contenedor .contenido .listaUl a{
+        text-decoration: none;
+        color: black;
+        font-size: 1em;
+        padding-right: 40px;
+        
+    }
+    .contenedor .contenido .listaUl a:hover{
+        color: rgb(43, 226, 141);
+
+    }
+
+    /*TEXTO**************************/
+    .texto .parrafo img{
+        width: 30%;
+        height: 20%;
+        display: flex;
+        justify-content: center;
+        padding-top: 30px;
+        margin: auto;
+    }
+    .texto .parrafo img:hover{
+        filter: sepia(30%);
+    }
+    .texto .parrafo{
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .texto .parrafo p{
+        margin: 10px;
+        padding: 9px;
+        text-align: center;  
+    }
+
+    /*GALERIA*************************/
+    .fotos{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 40px;
+        margin: auto;
+        
+    }
+    .fotos img{
+        height: 150px;
+        padding: 20px;
+        border-radius: 20%;
+        
+    }
+
+    /*PIE DE PAGINA*********************/
+    .pie-pagina .box-1 a img{
+        width: 70px;
+    }
+    .pie-pagina{
+        margin-top: auto;
+        width: 100%;
+        height: 4px;
+    }
+    .pie-pagina .box-2 {
+        padding-right: 40px;
+    }
+    
+}
